--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,55 +1,50 @@
-section {
-    margin:100px;
-}
-
-.countdown {
-
-    border: 3px black solid;
-    float: right;
-}
-.box {
-    color: blueviolet;
+#countdown {
+    text-align: right;
+    margin-right: 50px;
     font-size: 30px;
-    background-color: bisque;
-    height:500px;
-    width: 750px;
-    margin:auto;
-    border: 3px black solid;
-
 }
-.question {
-    padding: 40px;
-    text-align: center;
-    color: crimson;
 
+#frame001 {
+    align-items:center ;
+    background-color: white;
+    border: 4px solid black;
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
+    padding: 50px;
+    margin: 50px;
 }
-.answer {
-   align-items: left;
+
+.button1 {
+    background-color: rgb(53, 14, 116);
+    color: white;
+    padding: 5px;
+    margin: 10px;
+    border-radius: 10px;
+    width: 100px;
+}
+
+.button2 {
+    background-color: rgb(139, 123, 139);
     color: black;
-    padding: 20px;
-    height: 200px;
-    width: 200px;
+    padding: 5px;
+    margin: 10px;
+    border-radius: 10px;
+    width: auto;
 }
 
-.answer-btn {
-  
-    color: coral;
-    background-color: chartreuse;
-    size: 10px;
-    font-size: 20px;
-   
-    padding: 10px;
-    margin:10px;
-   
+#text001 {
+    text-align: center;
 }
-.countdown-btn {
-    align-items: center;
-    color: coral;
-    background-color: chartreuse;
-    size: 30px;
-    font-size: 40px;
-    float:right;
-    padding: 10px;
-    margin:50px;
-   
+
+#text002 {
+    text-align: left;
+}
+
+#green001 {
+    color: green;
+}
+
+#red001 {
+    color: red;
 }
