--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
     font-size: 30px;
 }
 
-#frame001 {
+#quizbox {
     align-items:center ;
     background-color: white;
     border: 4px solid black;
@@ -13,6 +13,14 @@
     border-radius: 10px;
     padding: 50px;
     margin: 50px;
+}
+.button {
+    background-color: rgb(53, 14, 116);
+    color: white;
+    padding: 5px;
+    margin: 10px;
+    border-radius: 10px;
+    width: 100px;
 }
 
 .button1 {
@@ -40,11 +48,12 @@
 #text002 {
     text-align: left;
 }
-
+/*correct answer*/
 #green001 {
     color: green;
 }
 
+/*incorrect answer*/
 #red001 {
     color: red;
 }
